--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <p>Адрес: г. Москва, ул. Парикмахерская, д. 1</p>
         <p>Часы работы: Пн-Сб: 9:00 - 20:00, Вс: 10:00 - 18:00</p>
     </section>
+  <a href= “https://zerocoder.ru"> А здесь вы можете поработать с нейросетью! </a>
 </div>
 </div>
 
